--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     rev: 24.1.1
     hooks:
       - id: black
-        language_version: python3.11
+        language_version: python3.13
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.2.1
@@ -31,7 +31,7 @@ repos:
         additional_dependencies:
           - pydantic>=2.6.0
           - boto3-stubs[dynamodb,events,lambda]>=1.34.0
-          - types-httpx
+          - httpx>=0.26.0
         args: [--strict, --ignore-missing-imports]
         exclude: ^tests/
 
@@ -50,4 +50,4 @@ repos:
           "--cov-fail-under=80",
           "-m", "not integration and not e2e"
         ]
-        stages: [commit]
+        stages: [pre-commit]
