--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dev = [
     "mypy>=1.8.0",
     "pre-commit>=3.6.0",
     "moto[dynamodb,events]>=5.0.0",
-    "httpx-mock>=0.14.0",
+    "pytest-httpx>=0.30.0",
     "faker>=22.0.0",
 ]
 
