--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,6 +148,9 @@ ignore = [
 "__init__.py" = ["F401"]
 "tests/**/*" = ["ARG", "S101"]
 
+[tool.ruff.isort]
+known-first-party = ["restaurant_sync_service"]
+
 [tool.mypy]
 python_version = "3.11"
 warn_return_any = true
