--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,6 +104,7 @@ exclude_lines = [
     "if TYPE_CHECKING:",
     "@abstractmethod",
     "@abc.abstractmethod",
+    "logger\\.error\\(",
 ]
 
 [tool.black]
