--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "httpx>=0.26.0",
     "boto3>=1.34.0",
     "boto3-stubs[dynamodb,events,lambda]>=1.34.0",
+    "mangum>=0.17.0",
     "opentelemetry-api>=1.22.0",
     "opentelemetry-sdk>=1.22.0",
     "opentelemetry-instrumentation-fastapi>=0.43b0",
@@ -177,5 +178,7 @@ module = [
     "boto3.*",
     "botocore.*",
     "moto.*",
+    "mangum.*",
+    "pythonjsonlogger.*",
 ]
 ignore_missing_imports = true
